todo-app-deployment.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: todo-app-secret
# type: kubernetes.io/dockerconfigjson
# data:
#   .dockerconfigjson: ewoJImF1dGhzIjogewoJCSIwMzY3MjQ1ODI2MTcuZGtyLmVjci5hcC1zb3V0aC0xLmFtYXpvbmF3cy5jb20iOiB7CgkJCSJhdXRoIjogIlFWZFRPbVY1U25kWldHeHpZakpHYTBscWIybFhiVlpxVmtad00xcEdjRTVhUmxweFlteG9jVlJWUm1oaVIzQnVUa000Y21OcVZsRk9XRXA2V2tSR1NXSlRPVEJUVjNCelkzcGFSR1F6WTNwaE1sWjNZbGhHUWxveWRFSk1NRTV2WVRBMWQxTnJhRzlSYW1SU1ZYcGtkRlV4U25kV1ZVNXJZVlJzTlZSR1NrMVdWV3hRVlVoUmVWTlZjRWRqYmxKTldsUnNlV05GYUVwTk1GSldXVzE0V0ZGdE1YQldWazVLVXpGU05HVkdRa3RPTUhNeFUwZEtibEZZU2tWV1YyeFdXVE5zZUdKdVJuVldNREV4Vm01R2IyT [...]
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: 036724582617.dkr.ecr.ap-south-1.amazonaws.com/django_todo:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  annotations:    
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  # ingressClassName: alb
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        # pathType: ImplementationSpecific
        backend:
          service:
            name: todo-app-service
            port: 
              number: 80
